<resources>
    <string name="app_name">KmCarro</string>
    <string name="txt_km_inicio">Km Inicial:</string>
    <string name="txt_km_final">Km Final:</string>
    <string name="edt_oleo" />
    <string name="txt_oleo">Óleo:</string>
    <string name="txt_dono">Proprietario:</string>
    <string name="btn_salvar">Salvar</string>
    <string name="txt_filtro">Filtro</string>
    <string name="rb_sim">Sim</string>
    <string name="rb_nao">Não</string>
    <string name="edt_proprietario" />
    <string name="id_sair">Sair</string>
    <string name="id_dados">Cadastro</string>
    <string name="txt_modelo">Veiculo:</string>
    <string name="edt_modelo" />
    <string name="btn_apagar">Apagar Carro</string>
    <string name="edt_id" />
    <string name="txt_km1">Km Inicial</string>
    <string name="txt_placa">Placa:</string>
    <string name="edt_placa" />
    <string name="menu_carros">Carros</string>
    <string name="btn_foto">Foto</string>
    <string name="deleta">Apagar Cadastro</string>
    <string name="btn_editar">Editar</string>
    <string name="edt_edita" />
    <string name="btn_atualizar">Atualizar</string>
    <string name="Editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="txt_p_placa">Placa:</string>
    <string name="txt_v_veiculo">Veiculo:</string>
    <string name="txt_k1_inicial">Km_Inicial:</string>
    <string name="txt_k2_final">Proxima Troca:</string>
    <string name="txt_o_oleo">Óleo:</string>
    <string name="txt_prop">Proprietário:</string>
    <string name="txt_f_filtro">Filtro:</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="id_menu_sobre">Sobre</string>
    <string name="id_cadastro">Cadastro</string>
    <string name="sair">Sair</string>

</resources>
