<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.renato.kmcar.MainActivity">

    <TextView
        android:id="@+id/txt_modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/txt_modelo"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_modelo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Marca/Modelo"
        android:inputType="textPersonName"
        android:text="@string/edt_modelo"
        app:layout_constraintStart_toEndOf="@+id/txt_modelo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_km_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_weight="0"
        android:text="@string/txt_km_inicio"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_modelo" />

    <EditText
        android:id="@+id/edt_km_1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="000000"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/txt_km_inicio"
        app:layout_constraintTop_toBottomOf="@+id/edt_modelo" />

    <TextView
        android:id="@+id/txt_km_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_km_final"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_km_inicio" />

    <EditText
        android:id="@+id/edt_km_2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="000000"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/txt_km_final"
        app:layout_constraintTop_toBottomOf="@+id/edt_km_1" />

    <TextView
        android:id="@+id/txt_oleo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_oleo"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_km_final" />

    <EditText
        android:id="@+id/edt_oleo"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Marca/Tipo"
        android:inputType="textPersonName"
        android:text="@string/edt_oleo"
        app:layout_constraintStart_toEndOf="@+id/txt_oleo"
        app:layout_constraintTop_toBottomOf="@+id/edt_km_2" />

    <EditText
        android:id="@+id/edt_proprietario"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_carro" />

    <TextView
        android:id="@+id/txt_carro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_dono"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/btn_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_proprietario" />

    <TextView
        android:id="@+id/txt_filtro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_filtro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_oleo" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_filtro">

        <RadioButton
            android:id="@+id/rb_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="@string/rb_sim"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="210dp" />

        <RadioButton
            android:id="@+id/rb_nao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="@string/rb_nao"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/rb_sim"
            tools:layout_editor_absoluteX="76dp" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
