<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/papel_de_parede">

        <TextView
            android:id="@+id/txt_placa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/txt_p_placa"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_p_placa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/papel_de_parede">

        <TextView
            android:id="@+id/txt_veiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_v_veiculo"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_v_veiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/papel_de_parede">

        <TextView
            android:id="@+id/txt_km_inicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_k1_inicial"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_k1_inical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/papel_de_parede">

        <TextView
            android:id="@+id/txt_km_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_k2_final"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_k2_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/papel_de_parede">

        <TextView
            android:id="@+id/txt_oleo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_o_oleo"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_o_oleo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/papel_de_parede">

        <TextView
            android:id="@+id/txt_prop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_prop"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_pro_prop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/papel_de_parede">

        <TextView
            android:id="@+id/txt_filtro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_f_filtro"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_f_filtro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/papel_de_parede">

        <ImageView
            android:id="@+id/img_foto"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</LinearLayout>
