<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.renato.kmcar.MainActivity"
    android:id="@+id/template">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ic_launcher_background"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light">

                <TextView
                    android:id="@+id/txt_placa2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_placa"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_placa2"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:focusable="true"
                    android:inputType="textCapCharacters" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark">

                <TextView
                    android:id="@+id/txt_modelo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:text="@string/txt_modelo"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_modelo2"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:inputType="textCapWords" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:id="@+id/txt_km_inicio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_weight="0"
                    android:text="@string/txt_km_inicio"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_km_1_2"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#5f6bc4">

                <TextView
                    android:id="@+id/txt_km_final2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:text="@string/txt_km_final"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_km_2_2"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark">

                <TextView
                    android:id="@+id/txt_oleo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="84dp"
                    android:text="@string/txt_oleo"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_oleo2"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/holo_blue_light">

                <TextView
                    android:id="@+id/txt_proprietario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/txt_dono"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_proprietario2"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@android:color/holo_blue_light">

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="0dp">

                    <TextView
                        android:id="@+id/txt_filtro2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_filtro"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_sim2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/rb_sim"
                        android:textSize="14sp"
                        tools:layout_editor_absoluteX="20dp"
                        tools:layout_editor_absoluteY="210dp" />

                    <RadioButton
                        android:id="@+id/rb_nao2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/rb_nao"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_imagem2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_blue_light"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:scaleType="centerCrop"
                     />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fd2881c9">

                <Button
                    android:id="@+id/btn_atualizar"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/btn_atualizar"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/img_botao2"
                    style="@android:style/Widget.ImageButton"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="3dp"
                    android:background="#DCDCDC"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/camera4" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

